Configuring Expensify App Layout

--- a/r-09-11-favicon/r-09-11-favicon/r-09-11-favicon/package.json
+++ b/r-09-11-favicon/r-09-11-favicon/r-09-11-favicon/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "boilerplate",
+  "name": "indecision-app",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Nick Rose",
+  "author": "Andrew Mead",
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
@@ -17,11 +17,11 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
-    "live-server": "^1.2.1",
-    "node-sass": "^5.0.0",
+    "live-server": "^1.2.0",
+    "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
     "react-modal": "2.2.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
