--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "test": "jest"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -18,9 +19,10 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "jest": "20.0.4",
     "live-server": "^1.2.1",
     "moment": "2.18.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "5",
     "normalize.css": "7.0.0",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
