--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
+    "firebase": "4.2.0",
     "moment": "2.18.1",
     "node-sass": "5",
     "normalize.css": "7.0.0",
